Fix all styles in html doc

--- a/clone_chrome/css/style.css
+++ b/clone_chrome/css/style.css
@@ -1,53 +1,36 @@
+body{
+    color: #ffff;
+}
+
+h1{
+    text-align: center;
+}
+
 .hidden {
     display: none;
 }
-/* 백그라운드 이미지 설정 */
-.img { 
-    position: relative; 
-    width: 100%; /* for IE 6 */
- }
-#login_form{
-    position:absolute;
-    top: 15%;
-    left: 45%;
-}
-h1 {
-    text-align: center;
-    color: chocolate;
-    position: absolute;
-    top: 200px; 
-    left: 0; 
-    width: 100%; 
-}
-ul {
-    color: white;
-}
-.todo-box {
-    position:absolute;
-    left:55%;
-    top:50%;
-    margin-left:-150px;
-    margin-top:-150px;
-}
-#clock {
-    position: absolute;
-    color: coral;
-    top: 0%;
-    left: 35%;
-    width: 100%; 
+#header{
+    margin-top: 1%;
+    padding: 1%;
 }
 
-#quote {
-    color: beige;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+#clock {
+    text-align: center;
 }
-#weather {
-    position: absolute;
-    color: white;
-    font-size: 25px;
-    top: 7%;
-    left: 40%;
+#login_form{
+    text-align: center;
 }
+footer{
+    position: fixed;
+    background-color: #4a4e69;
+    color: #fff;
+    text-align: center;
+    padding: 30px;
+    bottom: 0;
+    width: 100%;
+}
+#cite{
+    color: #fff;
+}
+
